--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
     <title>Best Tour Plan - Hotel Booking</title>
 </head>
 <body>
