--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
     <title>Best Tour Plan - Hotel Booking</title>
 </head>
 <body>
-    header <div class="header">
+    <header class="header">
         <div class="container">
             <div class="header-top">
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="Logo: Best Tour Plan" class="logo__img">
                 </a>
 
-                <form action="" class="search">
-                    <input type="text" class="search__input">
+                <form action="" class="search header__search">
+                    <input type="text" class="search__input" placeholder="Search Location">
                     <button class="search__button">
                         <img src="img/search.svg" alt="Icon: search">
                     </button>
@@ -41,6 +42,6 @@
             <!-- /.header-menu -->
         </div>
         <!-- /.container -->
-    </div>
+    </header>
 </body>
 </html>
