--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
                     <img src="img/logo.svg" alt="Logo: Best Tour Plan" class="logo__img">
                 </a>
 
-                <form action="" class="search header__search">
+                <form action="" class="search navbar__search">
                     <input type="text" class="search__input" placeholder="Search Location">
                     <button class="search__button">
                         <img src="img/search.svg" alt="Icon: search">
                     </button>
                 </form>
 
-                <a href="#" class="user">
+                <a href="#" class="navbar__user user">
                     <img src="img/avatar.jpg" alt="Avatar: Nathan" class="user__avatar">
                     <span class="user__name">Nathan</span>
                 </a>
                 <!-- /.user -->
+                <button class="menu-btn navbar-top__menu-btn">
+                    <span class="menu-btn__line"></span>
+                    <span class="menu-btn__line"></span>
+                    <span class="menu-btn__line"></span>
+                </button>
             </div>
             <!-- /.navbar-top -->
         </div>
