create breadcrumbs and hotel section, add responsive view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
     <title>Best Tour Plan - Hotel Booking</title>
 </head>
@@ -53,5 +53,51 @@
         </div>
         <!-- /.navbar-bottom -->
     </header>
+    <nav class="breadcrumb">
+        <div class="container">
+            <ul class="breadcrumb-list">
+                <li class="breadcrumb-list__item">
+                    <a href="" class="breadcrumb-list__link">Home</a>
+                </li>
+                <li class="breadcrumb-list__item">
+                    <a href="" class="breadcrumb-list__link">Flash Offers</a>
+                </li>
+                <li class="breadcrumb-list__item">Grand Hilton Hotel</li>
+            </ul>
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- /.breadcrumb -->
+    <section class="hotel">
+        <div class="container">
+            <div class="hotel-info">
+                <div class="hotel-info__left">
+                    <div class="hotel-wrapper">
+                        <div class="stars">
+                            <img src="img/star.svg" alt="Star" class="star">
+                            <img src="img/star.svg" alt="Star" class="star">
+                            <img src="img/star.svg" alt="Star" class="star">
+                            <img src="img/star.svg" alt="Star" class="star">
+                            <img src="img/star.svg" alt="Star" class="star">
+                        </div>
+                        <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
+                        <span class="hotel-info__offer extras">Flash Offer</span>
+                    </div>
+                    <!-- /.hotel-wrapper -->
+                    <p class="description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+                </div>
+                <div class="hotel-info__right">
+                    <div class="raiting extras">
+                        <span class="raiting__text">User Rattings</span>
+                        <span class="raiting__counter">4.5/5</span>
+                    </div>
+                    <!-- /.raiting -->
+                </div>
+            </div>
+            <!-- /.hotel-info -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.hotel -->
 </body>
 </html>
