--- a/index.html
+++ b/index.html
@@ -107,10 +107,19 @@
                                 <img src="img/slide.jpg" alt="Slide"/>
                             </div>
                             <div class="swiper-slide">
-                                <img src="img/slide.jpg" alt="Slide"/>
+                                <img src="img/slide1.jpg" alt="Slide"/>
                             </div>
                             <div class="swiper-slide">
-                                <img src="img/slide.jpg" alt="Slide"/>
+                                <img src="img/slide2.jpg" alt="Slide"/>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/slide3.jpg" alt="Slide"/>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/slide4.jpg" alt="Slide"/>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/slide5.jpg" alt="Slide"/>
                             </div>
                         </div>
 
@@ -120,6 +129,43 @@
                     </div>
                 </div>
                 <!-- /.slider -->
+                <div class="hotel-data">
+                    <div class="booking">
+                        <div class="booking__info">
+                            <div class="price">
+                                <span class="price__start">price starts as</span>
+                                <strong class="price__pricetag">$ 8,500</strong>
+                                <span class="price__per-room">per room / night</span>
+                            </div>
+                            <div class="booking-room">
+                                <div class="booking__text">
+                                    <img src="img/user.svg" alt="Icon user" class="booking__icon">
+                                    <span class="booking__description">2 x Guests</span>
+                                </div>
+                                <div class="booking__text">
+                                    <img src="img/home.svg" alt="Icon user" class="booking__icon">
+                                    <span class="booking__description">1 x Room</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.booking-info -->
+                        <div class="call-center">
+                            <span class="call-center__text">Quick Booking</span>
+                            <a href="tel:12100" class="call-center__phone">
+                                <img src="img/phone-call.svg" alt="Icon phone">
+                                <span class="call-center__num">12100</span>
+                            </a>
+                        </div>
+                        <!-- /.call-center -->
+                        <button class="button extras booking__button">View Other Options</button>
+                    </div>
+                    <!-- /.booking -->
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6371451.900787557!2d15.910583748722319!3d42.6094086782353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2f95aef5e17af993!2sHilton%20Sorrento%20Palace!5e0!3m2!1sru!2sby!4v1600784688080!5m2!1sru!2sby" 
+                        width="347" height="213" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+                    <!-- /.map -->
+                </div>
             </div>
             <!-- /.hotel-grid -->
         </div>
