create media for reviewers

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <img src="img/review-avatar.jpg" alt="Photo Megan Fox" class="reviews-slider__avatar">
                                 <h3 class="reviews-slider__username">Megan Fox</h3>
                                 <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
-                                <div class="stars">
+                                <div class="stars reviews-rating">
                                     <img src="img/star.svg" alt="Star" class="star">
                                     <img src="img/star.svg" alt="Star" class="star">
                                     <img src="img/star.svg" alt="Star" class="star">
@@ -226,7 +226,7 @@
                                 <img src="img/review-avatar1.jpg" alt="Photo Mabel" class="reviews-slider__avatar">
                                 <h3 class="reviews-slider__username">Mabel</h3>
                                 <span class="reviews-slider__date">Stayed 1 July, 2019</span>
-                                <div class="stars">
+                                <div class="stars reviews-rating">
                                     <img src="img/star.svg" alt="Star" class="star">
                                     <img src="img/star.svg" alt="Star" class="star">
                                     <img src="img/star.svg" alt="Star" class="star">
@@ -255,7 +255,7 @@
                                 <img src="img/review-avatar2.jpg" alt="Photo OMON" class="reviews-slider__avatar">
                                 <h3 class="reviews-slider__username">OMONovez</h3>
                                 <span class="reviews-slider__date">Stayed 23 Sep, 2020</span>
-                                <div class="stars">
+                                <div class="stars reviews-rating">
                                     <img src="img/star.svg" alt="Star" class="star">
                                 </div>
                             </div>
