--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <!-- /.container -->
     </section>
-    <section class="newsletter">
+    <section class="newsletter" data-parallax="scroll">
         <div class="newsletter-wrapper">
             <h2 class="newsletter-title">
                 subscribe to our
@@ -281,6 +281,8 @@
         </div>
         <!-- /.container -->
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>    
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
