fix regarding comments

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <!-- /.booking -->
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6371451.900787557!2d15.910583748722319!3d42.6094086782353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2f95aef5e17af993!2sHilton%20Sorrento%20Palace!5e0!3m2!1sru!2sby!4v1600784688080!5m2!1sru!2sby" 
-                        width="100%" height="100%" frameborder="0" style="border:0;border-radius: 10px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        style="border:0;border-radius: 10px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                     <!-- /.map -->
                 </div>
