create responsive activities section

--- a/index.html
+++ b/index.html
@@ -281,6 +281,39 @@
         </div>
         <!-- /.container -->
     </section>
+    <section class="activities">
+        <div class="container">
+            <h2 class="activities__title">Other Activities</h2>
+            <div class="activities-wrapper">
+                <div class="activities-item">
+                    <img src="img/activity1.jpg" alt="Icon activity" class="activities-item__img">
+                    <span class="activities-item__title">The curious corner of chamarel</span>
+                    <button class="activities-item__button extras">Book Now</button>
+                </div>
+                <!-- /.activities-item -->
+                <div class="activities-item">
+                    <img src="img/activity2.jpg" alt="Icon activity" class="activities-item__img">
+                    <span class="activities-item__title">Gymkhana club golf course</span>
+                    <button class="activities-item__button extras">Book Now</button>
+                </div>
+                <!-- /.activities-item -->
+                <div class="activities-item">
+                    <img src="img/activity3.jpg" alt="Icon activity" class="activities-item__img">
+                    <span class="activities-item__title">Tamarind falls hiking trip - full day</span>
+                    <button class="activities-item__button extras">Book Now</button>
+                </div>
+                <!-- /.activities-item -->
+                <div class="activities-item">
+                    <img src="img/activity4.jpg" alt="Icon activity" class="activities-item__img">
+                    <span class="activities-item__title">The blue marine discovery quest</span>
+                    <button class="activities-item__button extras">Book Now</button>
+                </div>
+                <!-- /.activities-item -->
+            </div>
+            <!-- /.activities-wrapper -->
+        </div>
+        <!-- /.container -->
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>    
     <script src="js/swiper-bundle.min.js"></script>
