create mobile menu

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <title>Best Tour Plan - Hotel Booking</title>
 </head>
 <body>
-    <header class="navbar">
+    <header class="navbar navbar--mobile_fixed">
         <div class="container">
             <div class="navbar-top">
                 <a href="#" class="logo">
                     <img src="img/logo.svg" alt="Logo: Best Tour Plan" class="logo__img">
                 </a>
 
-                <form action="get" class="search navbar__search">
+                <form action="get" class="search navbar__search navbar__search--mobile_hidden">
                     <input type="text" class="search__input" placeholder="Search Location">
                     <button class="search__button">
                         <img src="img/search.svg" alt="Icon: search">
                     </button>
                 </form>
 
-                <a href="#" class="navbar__user user">
+                <a href="#" class="navbar__user navbar__user--mobile_hidden user">
                     <img src="img/avatar.jpg" alt="Avatar: Nathan" class="user__avatar">
                     <span class="user__name">Nathan</span>
                 </a>
@@ -40,6 +40,20 @@
         <div class="navbar-bottom">
             <div class="container">
                 <ul class="navbar-menu">
+                    <li class="navbar-menu__item navbar-menu__item--mobile_visible">
+                        <a href="#" class="navbar__user navbar__user--mobile_visible user">
+                            <img src="img/avatar.jpg" alt="Avatar: Nathan" class="user__avatar">
+                            <span class="user__name">Nathan</span>
+                        </a>
+                    </li>
+                    <li class="navbar-menu__item navbar-menu__item--mobile_visible">
+                        <form action="get" class="search navbar__search navbar__search--mobile_visible">
+                            <input type="text" class="search__input" placeholder="Search Location">
+                            <button class="search__button">
+                                <img src="img/search.svg" alt="Icon: search">
+                            </button>
+                        </form>
+                    </li>
                     <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
                     <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
                     <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
@@ -398,7 +412,7 @@
                     <form action="get" class="footer__form">
                         <input type="text" name="name" id="name" class="footer__input" placeholder="Your Full Name*">
                         <input type="tel" name="phone" id="phone" class="footer__input" placeholder="Phone Number*">
-                        <textarea name="message" id="message" class="footer__textarea" placeholder="Message" cols="30" rows="10" class="footer__message"></textarea>
+                        <textarea name="message" id="message" class="footer__textarea" placeholder="Message" cols="30" rows="10"></textarea>
                         <div class="footer__button-wrapper">
                             <button class="footer__button extras">Send</button>
                             <span class="footer__info">* Required Fields</span>
