create modal window and make it responsive

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </a>
                         </div>
                         <!-- /.call-center -->
-                        <button class="button extras booking__button">View Other Options</button>
+                        <button data-toggle="modal" class="button extras booking__button">View Other Options</button>
                     </div>
                     <!-- /.booking -->
                     <div class="map">
@@ -191,8 +191,8 @@
                 subscribe to our
                 <span class="newsletter-title__strong">Newsletter</span>
             </h2>
-            <form action="get" class="subscribe newsletter__subscribe">
-                <input type="text" class="subscribe__input" placeholder="Your email address">
+            <form action="send.php" method="POST" class="subscribe newsletter__subscribe">
+                <input type="text" name="email" class="subscribe__input" placeholder="Your email address">
                 <button class="subscribe__button">Send</button>
             </form>
         </div>
@@ -409,12 +409,26 @@
                 <!-- /.footer__contact-details -->
                 <div class="footer__contact-form contact-form">
                     <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-                    <form action="get" class="footer__form">
-                        <input type="text" name="name" id="name" class="footer__input" placeholder="Your Full Name*">
-                        <input type="tel" name="phone" id="phone" class="footer__input" placeholder="Phone Number*">
-                        <textarea name="message" id="message" class="footer__textarea" placeholder="Message" cols="30" rows="10"></textarea>
+                    <form action="send.php" method="POST" class="footer__form">
+                        <input type="text" 
+                            name="name" 
+                            id="name" 
+                            class="footer__input" 
+                            placeholder="Your Full Name*">
+                        <input type="text" 
+                            name="phone" 
+                            id="phone" 
+                            class="footer__input" 
+                            placeholder="Phone Number*">
+                        <textarea 
+                            name="message" 
+                            id="message" 
+                            class="footer__textarea" 
+                            placeholder="Message" 
+                            cols="30" rows="6"
+                            ></textarea>
                         <div class="footer__button-wrapper">
-                            <button class="footer__button extras">Send</button>
+                            <button class="footer__button button extras">Send</button>
                             <span class="footer__info">* Required Fields</span>
                         </div>
                     </form>
@@ -422,7 +436,7 @@
                 <!-- /.footer__contacts-form -->
                 <div class="footer__policies policies">
                     <ul class="footer__ul">
-                        <li class="footer__ul-item">Disclaimer</li>
+                        <li class="footer__ul-item footer__ul-item--no-margin">Disclaimer</li>
                         <li class="footer__ul-item">Conditions of use</li>
                         <li class="footer__ul-item">Cancellation policy</li>
                     </ul>
@@ -436,7 +450,39 @@
         </div>
         <!-- /.container -->
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <div class="modal">
+        <div class="modal__overlay"></div>
+        <!-- /.modal__overlay -->
+        <div class="modal__dialog">
+            <a href="#" class="modal__close">
+                <img src="img/close.svg" alt="Icon: close">
+            </a>
+            <h3 class="modal__title modal__title--mb-3">Send us a message</h3>
+            <form action="send.php" method="POST" class="modal__form">
+                <input type="text" 
+                    name="name" 
+                    class="modal__input" 
+                    placeholder="Your Full Name*">
+                <input type="text" 
+                    name="phone" 
+                    class="modal__input" 
+                    placeholder="Phone Number*">
+                <textarea 
+                    name="message" 
+                    class="modal__textarea" 
+                    placeholder="Message" 
+                    cols="30" rows="6"
+                    ></textarea>
+                <div class="modal__button-wrapper">
+                    <button class="modal__button button extras">Send</button>
+                    <span class="modal__info">* Required Fields</span>
+                </div>
+            </form>
+        </div>
+        <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>    
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
