fix text, font size and input on modal window

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 </div>
                 <!-- /.footer-list -->
                 <div class="footer__contact-details contact-details">
-                    <h3 class="footer__title">Contact Details</h3>
+                    <h3 class="footer__title contact-details__title">Contact Details</h3>
                     <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
                     <ul class="footer__ul">
                         <li class="footer__item footer__item--mb-2">
@@ -457,7 +457,7 @@
             <a href="#" class="modal__close">
                 <img src="img/close.svg" alt="Icon: close">
             </a>
-            <h3 class="modal__title modal__title--mb-3">Send us a message</h3>
+            <h3 class="modal__title modal__title--mt-0">Booking</h3>
             <form action="send.php" method="POST" class="modal__form">
                 <input type="text" 
                     name="name" 
@@ -467,6 +467,10 @@
                     name="phone" 
                     class="modal__input" 
                     placeholder="Phone Number*">
+                <input type="text" 
+                    name="email" 
+                    class="modal__input" 
+                    placeholder="Email*">
                 <textarea 
                     name="message" 
                     class="modal__textarea" 
